--- a/news.html
+++ b/news.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+  <!-- Header / Navigation -->
   <header>
     <h1>Trading Hub</h1>
     <nav>
@@ -18,12 +20,15 @@
     </nav>
   </header>
 
+  <!-- News Section -->
   <section>
     <h2>📰 Market News</h2>
+    <p>Stay up-to-date with the latest updates from Crypto, Forex, and Futures markets.</p>
+
     <div class="grid">
       <div class="card">
         <h3>Crypto</h3>
-        <p>Bitcoin surges past $43K as altcoins rally.</p>
+        <p>Bitcoin breaks $43K as altcoins rally.</p>
       </div>
       <div class="card">
         <h3>Forex</h3>
@@ -36,8 +41,11 @@
     </div>
   </section>
 
+  <!-- Footer -->
   <footer>
     <p>© 2025 Trading Hub. All rights reserved.</p>
   </footer>
+
 </body>
 </html>
+
